# AlphaGrid

./: .gitignore  AGENTS.md  INSTALL.md  PARQUET_STORE_TEST_REPORT.md  README.md  REQUIREMENTS.md  TEST_REPORT.md  install-simple.bat  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  run.sh  setup.py
configs/: all_stocks.txt  data_config.yaml  data_layers.yaml  governance_config.yaml  sector_symbols.txt  selection.yaml  selection_ml_xgb.yaml  selection_rank_topn.yaml  selection_value_momentum.yaml
data/financial/: financial_2024-01-05.parquet
data/fundamental/: fundamental_2024-01-05.parquet
docs/: DATA_MODULE_OPTIMIZATION.md  INSTALL_SCRIPTS_UPDATE.md  PROJECT_RESTRUCTURE_GUIDE.md  REQUIREMENTS_TOOLS.md  REQUIREMENTS_UPDATE_LOG.md  SCRIPT_OPTIMIZATION.md
install/: update-requirements.bat  update-requirements.sh  update_requirements.py
install/requirements/: requirements-dev.txt
quant/: config.ini  config_manager.py  run_backtest.py
quant/configs/: sector_symbols.txt
quant/data/: 510300.SH.csv  600000.SH.csv  stock.csv
quant/datahub/: db.py  service.py  types.py
quant/engine/: backtest.py  data.py  metrics.py  risk.py
quant/example/: example_usage.py
quant/scripts/: update_history_layers.py
quant/test/: test_base.py  (+7 more)
requirements/: requirements-dev.txt  requirements-prod.txt  requirements.txt
scripts/: install-simple.bat  install-simple.sh  install.bat  install.sh  run.bat  run_stock_selection.py  run_update_data.py  update-requirements.sh  update_requirements.py
(+1027 files in other folders)
